@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libbonobui
+Description: libbonoboui
+Requires: glib-2.0 ORBit-2.0 libxml-2.0 libbonobo-2.0 libgnomecanvas-2.0 libgnome-2.0
+Version: @VERSION@
+Libs: ${pc_top_builddir}/${pcfiledir}/libbonoboui-2.la
+Cflags: -I${pc_top_builddir}/${pcfiledir}/..
